tests/compile_fail/invalid_lit_bool.rs
use better_cstr::c;

fn main() {
    c!(true);
}
