tests/compile_fail/invalid_lit_bool.stderr
error: Unsupported literal kind
 --> tests/compile_fail/invalid_lit_bool.rs:4:8
  |
4 |     c!(true);
  |        ^^^^
